tests/snapshots/indent_operations_test__2_shift_right_3j.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 6

Buffer:
a
b
c
[d]
e
f
