tests/snapshots/indent_operations_test__ctrl_t_indent_in_insert.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[t]line
