tests/snapshots/indent_operations_test__dedent_tabs.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[n]e
