tests/snapshots/indent_operations_test__equal_G.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 4:0
Lines: 5

Buffer:
{
line1
line2
line3
[}]
