tests/snapshots/indent_operations_test__equal_equal_auto_indent.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
if true {
[c]ode
}
