tests/snapshots/indent_operations_test__equal_motion.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 4

Buffer:
{
line1
[l]ine2
}
