tests/snapshots/indent_operations_test__indent_at_eof.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 2

Buffer:
line 1
    [ ]   line 2
